--- a/_posts/2020-09-19-abc179.md
+++ b/_posts/2020-09-19-abc179.md
@@ -81,7 +81,7 @@ fn main() {
     input! {
         n: usize
     }
-    let mut res = (1..n).fold(0, |sum, i| sum + (n - 1) / i);
+    let res = (1..n).fold(0, |sum, i| sum + (n - 1) / i);
     println!("{}", res);
 }
 ```
